--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Title Icon -->
     <link rel="shortcut icon" href="./images/rose_cake__UNv_2.ico" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
     <!-- Title -->
     <title>Cookie's Bakery</title>
   </head>
   <body>
-    <header class="header">
+    <header id="header">
       <!-- Navigation links -->
       <nav class="navbar">
         <ul>
           <li><a href="#home-section" class="nav-links">Home</a></li>
           <li><a href="#about-section" class="nav-links">About</a></li>
-          <li><a href="#menu-section" class="nav-links">Menu</a></li>
+          <li><a href="#gallery-section" class="nav-links">Gallery</a></li>
           <li><a href="#contact-section" class="nav-links">Contact</a></li>
         </ul>
       </nav>
@@ -28,20 +33,90 @@
       <!-- Home Section -->
       <section id="home-section">
         <h1 class="heading big-heading">Welcome To Cookie's Bakery</h1>
-        <p class="paragraphs">
+        <p>
           A Homemade Bakery shop in Cocord, NC
         </p>
       </section>
       <!-- About Section -->
       <section id="about-section">
         <h2 class="heading sub-heading">About Us</h2>
-        <!-- TODO: Finish the paragrap in the about section -->
-        <p class="paragraph"></p>
+        <p>
+          I originally started my business in New York because I always had a
+          passion in baking pastries. I created all kinds of cupcakes, cakes,
+          cookies, and more for parties, weddings, and events!
+        </p>
       </section>
       <!-- Menu Section -->
-      <section id="menu-section"></section>
+      <section id="gallery-section">
+        <h2 class="heading sub-heading">Gallery</h2>
+        <p>Here are some of the pastries I made.</p>
+        <div class="wrapper">
+          <input checked type="radio" name="slider" id="slide1" />
+          <input type="radio" name="slider" id="slide2" />
+          <input type="radio" name="slider" id="slide3" />
+
+          <div class="slider-wrapper">
+            <div class="inner">
+              <article>
+                <img src="./images/cookie-cake.jpg" />
+              </article>
+
+              <article>
+                <img src="./images/decorated-cake.jpg" />
+              </article>
+
+              <article>
+                <iframe
+                  width="560"
+                  src="https://www.youtube.com/embed/Ys1lZ5ia7RA"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <!-- <img src="./images/rose-cake.jpg" height="423" alt="" /> -->
+              </article>
+            </div>
+            <!-- .inner -->
+          </div>
+          <!-- .slider-wrapper -->
+
+          <div class="slider-prev-next-control">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+          </div>
+          <!-- .slider-prev-next-control -->
+
+          <div class="slider-dot-control">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+          </div>
+          <!-- .slider-dot-control -->
+        </div>
+      </section>
       <!-- Contact Section -->
-      <section id="contact-section"></section>
+      <section id="contact-section">
+        <h2>Feel free to Contact!</h2>
+        <div id="social-media-links">
+          <a
+            href="https://www.facebook.com/profile.php?id=100005254488367"
+            target="_blank"
+          >
+            <i class="fa fa-facebook-f"></i
+          ></a>
+          <a href="mailto:davidguzmaninc@gmail.com" target="_top">
+            <i class="fa fa-envelope"></i>
+          </a>
+          <a href="https://twitter.com/daveguz3197" target="_blank"
+            ><i class="fa fa-twitter"></i
+          ></a>
+        </div>
+      </section>
     </main>
+    <footer>
+      <p>&copy; 2019, Guz Web Media</p>
+    </footer>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
